--- a/family.html
+++ b/family.html
@@ -30,7 +30,7 @@
 			<img src = "images/badlands.jpg" width="1000" alt = "a boy and two girls at the badlands national park">
 			<img src = "images/falling.jpg" width="25" alt = "a boy is falling">
 			<img src = "images/rushmore.jpg" width="1000" alt = "Mount Rushmore National Memorial">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "A boy and two girls at the jewel cave national monument">
+			<img src = "images/jewel_cave.JPG" width="25" alt = "A boy and two girls at the jewel cave national monument">
 		</p>
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
